[project]
name = "dl"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "diffusers (>=0.32.1,<0.33.0)",
    "accelerate (>=1.2.1,<2.0.0)",
    "transformers (>=4.47.1,<5.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "scipy (>=1.15.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
